--- a/styles/index_style.css
+++ b/styles/index_style.css
@@ -11,6 +11,7 @@ body, html {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    -webkit-text-size-adjust: 100%;
 }
 
 #wrap {
