--- a/styles/popup.css
+++ b/styles/popup.css
@@ -32,22 +32,30 @@
     color: white;
 }
 .popup h1 {
-    text-align: center;
+    text-align: left;
     font-size: 28px;
     margin-top: 15px;
     margin-bottom: 5px;
-    margin-right: 15px;
-    margin-left: 15px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 .popup h3 {
-    text-align: center;
+    text-align: left;
     font-size: 18px;
-    font-style: italic;
-    color: rgb(105, 105, 105);
+    color: #797979;
     margin-top: 5px;
     margin-bottom: 25px;
-    margin-right: 5px;
-    margin-left: 5px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.popup h4 {
+    text-align: left;
+    font-size: 16px;
+    color: #797979;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 .popup p {
     font-size: 14px;
@@ -56,13 +64,16 @@
     margin-bottom: 20px;
     margin-top: 0px
 }
+.link {
+    margin-right: 10px;
+}
 .xbutton {
     position: absolute;
     right: 0px;
     top: 0px;
-    margin: 10px;
-    width: 20px;
-    height: 20px;
+    margin: 8px;
+    width: 15px;
+    height: 15px;
     cursor: pointer;
 }
 .project_img {
@@ -99,18 +110,30 @@
         padding: 0px;
     }
     .popup h1 {
-        text-align: center;
+        text-align: left;
         font-size: 42px;
+        margin-left: 60px;
+        margin-right: 60px;
         margin-top: 30px;
         margin-bottom: 10px;
     }
     .popup h3 {
-        text-align: center;
+        text-align: left;
         font-size: 24px;
-        font-style: italic;
-        color: rgb(105, 105, 105);
+        color: #797979;
+        margin-left: 60px;
+        margin-right: 60px;
         margin-top: 10px;
         margin-bottom: 50px;
+    }
+    .popup h4 {
+        text-align: left;
+        font-size: 21px;
+        color: #797979;
+        margin-top: 5px;
+        margin-bottom: 20px;
+        margin-left: 60px;
+        margin-right: 60px;
     }
     .popup p {
         font-size: 18px;
@@ -119,13 +142,16 @@
         margin-bottom: 40px;
         margin-top: 0px;
     }
+    .link {
+        margin-right: 50px;
+    }
     .xbutton {
         position: absolute;
         right: 0px;
         top: 0px;
-        margin: 20px;
-        width: 50px;
-        height: 50px;
+        margin: 15px;
+        width: 25px;
+        height: 25px;
         cursor: pointer;
     }
     .project_img {
